--- a/Front/styles.css
+++ b/Front/styles.css
@@ -2,7 +2,7 @@
 body {
     font-family: 'Arial', sans-serif; /* Font para a página */
     background-color: #002929; /* Fundo preto */
-    color: #00FFFF; /* Texto azul */
+    color: #48cef7; /* Texto azul */
     margin: 0;
     padding: 0;
     display: flex;
@@ -18,6 +18,14 @@ body {
     justify-content: center;
     align-items: center;
     height: 100vh;
+    
+}
+
+.logo img {
+    max-width: 100%;
+    height: auto;
+    max-height: 80px; /* Limite de altura da logo */
+
 }
 
 /* Estilos específicos para cada tela */
@@ -44,13 +52,16 @@ label {
 }
 
 header{
-
+    width: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100px; /* Defina a altura do cabeçalho */
 }
 
-.logo{
-
-    
-}
 
 input {
     display: block;
@@ -59,14 +70,14 @@ input {
     font-size: 18px; /* Aumentando o tamanho da fonte nos inputs */
     margin: 10px 0;
     border-radius: 10px;
-    border: 2px solid #00FFFF;
+    border: 2px solid #48cef7;
     background-color: #222222;
-    color: #00FFFF;
+    color: #48cef7;
     box-sizing: border-box;
 }
 
 button {
-    background-color: #00FFFF;
+    background-color: #48cef7;
     color: #000000;
     border: none;
     padding: 15px 25px; /* Botões maiores */
@@ -87,7 +98,7 @@ button:focus {
 
 /* Estilo para links, quando existir, como por exemplo na tela de erro */
 a {
-    color: #00FFFF;
+    color: #48cef7;
     font-size: 18px;
     text-decoration: none;
 }
